7114106: C1: assert(goto_state->is_same(sux_state)) failed: states must match now

Fix C1's CEE to take inlining into account when the stacks in states are compared.

Reviewed-by: iveresov, never